--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-body {
-    /* background-color: black; */
+* {
+    font-family: 'Itim', cursive;
 }
 .carousel-item {
     height: 500px;
@@ -18,4 +18,24 @@ body {
 .carousel-image-3 {
     background-image: url('image/picture3.jpeg');
     background-size: cover;
+}
+
+#about {
+    min-height: 200px;
+    position: relative;
+    background-image: url("image/picture4.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
+    color: white;
+    background-attachment: fixed;
+}
+
+.dark-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
 }
